# jeeves

./: CHANGELOG.md  CODE_OF_CONDUCT.md  Gemfile  LICENSE.txt  README.md  jeeves.gemspec  pyproject.toml
jeeves/: __init__.py  __main__.py  loader.py
jeeves/groups/: net.py
lib/: jeeves.rb
lib/jeeves/: version.rb
spec/: jeeves_spec.rb  spec_helper.rb
